--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -80,6 +80,8 @@
     padding-bottom: 10px;
   }
   .TaskOngoing{
+    display: flex;
+    flex-direction: row;
     cursor: pointer;
     font-size: 20px;
     padding: 10px;
@@ -116,5 +118,10 @@
   .Button{
     width: 13%;
   }
-
+  .WrittenContent:hover{
+    cursor: text;
+  }
+  .pen{
+    cursor: pointer;
+  }  
   
