--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -124,4 +124,14 @@
   .pen{
     cursor: pointer;
   }  
+  .Requestbuttons{
+  background-color: #4CAF50;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 1rem;
+  }
   
