--- a/client/src/components/dashboard/users/Dashboard.css
+++ b/client/src/components/dashboard/users/Dashboard.css
@@ -1,17 +1,34 @@
-.container {
+.dashboard-main_background{
+  background:url("https://productsinsights.com/wp-content/uploads/2023/02/Untitled-design-21.png");
+  background-size: cover;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: 60rem;
+  background-repeat: no-repeat;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.dash-main-div{
+  margin-top: 0rem;
+}
+#navbar{
+  transform: translate(0px,-60px);
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 40px;
+  flex-direction:row;
+  font-size: large;
+}
+ul{
+  list-style-type: none;
+  }
+
+.dash-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     min-height: 450px;
   }
-  
-  .sidebar {
-    width: 20%;
-    background-color: lightgray;
-    padding: 20px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-  }
-  
+
   .task-container {
     width: 80%;
     display: flex;
@@ -21,7 +38,7 @@
   
   .ongoing-tasks{
     width: 45%;
-    background-color: lightgray;
+    background-color: #fff0;
     margin-right: 65px;
     border-radius: 30px;
     display: flex;
@@ -72,6 +89,17 @@
   .TickMark{
     padding-top: 13px;
   }
+  .dash-displayName{
+    font-size: 33px;
+    padding-top: 1px;
+    padding-right: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    text-shadow: 1px 1px 3px black;
+    text-decoration: underline;
+  }
   .InputAdd{
     display: flex;
     flex-direction: row;
@@ -79,12 +107,44 @@
     width: 100%;
     padding-bottom: 10px;
   }
-  .TaskOngoing{
+  .dash-TaskOngoing{
     display: flex;
     flex-direction: row;
     cursor: pointer;
     font-size: 20px;
     padding: 10px;
+    color: rgb(7, 7, 7);
+  }
+
+  .dash-AddTaskButton{
+    cursor: pointer;
+    font-size: 17px;
+    width: 30%;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background-color: #3978D3 ;
+    color: #ffffff;
+    transition-duration: 500ms;
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    padding-left: 15px;
+  }
+  .dash-AddTaskButton:hover{
+    width: 30%;
+    border: 0px solid white;
+    border-radius: 10px;
+    background-color:#362EC2 ;
+    color: white;
+    transition-duration: 500ms;
+  }
+
+  .TaskOngoingHeading{
+    font-size: 30px;
+   font-weight: 600;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   color: #ffffff;
+   text-decoration: underline;
   }
   .TaskInput{
     width: 45%;
