--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -1,10 +1,12 @@
 .main_background{
-  background-image:url("https://productsinsights.com/wp-content/uploads/2023/02/background.png");
+  background:url("https://productsinsights.com/wp-content/uploads/2023/02/Untitled-design-21.png");
+  background-size: cover;
   min-height: 100%;
   min-width: 1024px;
   width: 100%;
-  height: auto;
-  position: fixed;
+  height: 60rem;
+  background-repeat: no-repeat;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main-div{
@@ -21,6 +23,7 @@
   background-color: white;
   border-radius: 28px;
   padding: 40px;
+  box-shadow: 1px 1px 10px #00000094;
 }
 
 .login-form{
@@ -76,6 +79,8 @@
   justify-content: center;
 }
 .button{
+  cursor: pointer;
+  font-size: 17px;
   width: 54%;
   border-radius: 10px;
   border: 1px solid #ccc;
